--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "8.0.6",
     "ejs": "3.0.1",
     "express": "4.17.1",
+    "node-fetch": "2.6.0",
     "pm2": "4.2.3",
     "prop-types": "15.7.2",
     "react": "16.12.0",
@@ -39,14 +40,5 @@
     "eslint-plugin-react": "7.18.3",
     "jest": "25.1.0",
     "react-test-renderer": "16.12.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
-    ]
   }
 }
