--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "8.0.6",
     "ejs": "3.0.1",
     "express": "4.17.1",
+    "lodash": "4.17.15",
     "node-fetch": "2.6.0",
     "pm2": "4.2.3",
     "prop-types": "15.7.2",
